Fix wrapping issues with repository names in the admin dashboard.
The Repositories widget in the admin dashboard behaved poorly when there
were long repository names, and in particular ones with unbreakable
characters.

This is a small change that tweaks this styling, forcing each column to
take half the available width instead of overflowing and allowing
repository names to break at the boundary and wrap.

Testing Done:
Tested with some pathological cases, and some normal cases. Checked the
output.

Reviewed at https://reviews.reviewboard.org/r/13437/

--- a/reviewboard/static/rb/css/pages/admin/dashboard.less
+++ b/reviewboard/static/rb/css/pages/admin/dashboard.less
@@ -180,7 +180,7 @@
    */
   &__items {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     margin: 0;
@@ -199,6 +199,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    word-wrap: break-word;
   }
 
   /**
